chore(security): separate JwtConfig, fix SecurityConfig, add InternalApiKeyFilter